# Robot-Assistant-Dev-Bank

./: C3_W1_Lab_2_Transfer_Learning_CIFAR_10.ipynb  README.md  update_changes.sh
1.Face_Detection_Python_Files/RaspberryPiPanTiltFaceTrackingOpenCV/: faceDetectTrainOpenCV.py  raspberrypiPanTiltFaceTrackingOpenCV.py
1.Face_Detection_Python_Files/face_detection_opencv_python/: python_opencv_camera_haar.py
2.Id_Number_Detection_Python_Files/: imageto_textto_speech.py  pyt.py
face_detector/: camera_node.py  coordinates_sub_node.py  face_Detector_node.py
icog_face_tracker/: CMakeLists.txt  package.xml
icog_face_tracker/launch/: tracker.launch  tracker_sim.launch
icog_face_tracker/msg/: facebox.msg  faces.msg
icog_face_tracker/src/: id_card_1.cpp  tracker.cpp
id_number_detector/: id_num_pub.py  id_num_sub.py
pan_and_tilt_control/: CMakeLists.txt  package.xml
pan_and_tilt_control/launch/: start_pan_and_tilt_client_sim_test.launch  start_pan_and_tilt_client_test.launch  start_pan_and_tilt_server.launch  start_pan_and_tilt_server_sim.launch
pan_and_tilt_control/msg/: PanAndTilt.msg
pan_and_tilt_control/scripts/: face_tracker.py  main.py  pan_and_tilt_client.py  pan_and_tilt_move.py  pan_and_tilt_move_sim.py  pan_and_tilt_server.py
pan_and_tilt_description/: CMakeLists.txt  package.xml
pan_and_tilt_description/config/: pan_and_tilt.yaml
pan_and_tilt_description/launch/: control_pan_and_tilt.launch  main.launch  main_sim.launch  start_world.launch  (+1 more)
pan_and_tilt_setup/: CMakeLists.txt  package.xml  setup_ic2_for_smbus.sh  ubuntumate_raspberrypi_setup.sh
(+14 files in other folders)
